<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinnerCourses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/textNoteTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="textMultiLine"
        android:hint="@string/note_title"
        app:layout_constraintEnd_toEndOf="@id/spinnerCourses"
        app:layout_constraintStart_toStartOf="@id/spinnerCourses"
        app:layout_constraintTop_toBottomOf="@id/spinnerCourses" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/textNoteText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="textMultiLine"
        android:hint="@string/note_text"
        app:layout_constraintEnd_toEndOf="@id/spinnerCourses"
        app:layout_constraintStart_toStartOf="@id/spinnerCourses"
        app:layout_constraintTop_toBottomOf="@id/textNoteTitle" />
    <TextView
        android:id="@+id/commentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Comments"
        android:textColor="#666666"
        android:textSize="12dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/textNoteText"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/commentsList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@id/commentLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"/>
</androidx.constraintlayout.widget.ConstraintLayout>