<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_notes"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/action_notes" />
        <item
            android:id="@+id/action_courses"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/action_courses" />
        <item android:id="@+id/action_recently_viewed"
            android:icon="@drawable/ic_recently_viewed"
            android:title="@string/recently_viewed_notes"/>

    </group>

    <item android:title="@string/communication">

        <menu>
            <item
                android:id="@+id/action_share"
                android:icon="@drawable/ic_share_black"
                android:title="@string/action_share" />
            <item
                android:id="@+id/action_send"
                android:icon="@drawable/ic_send_black"
                android:title="@string/action_send" />
            <item
                android:id="@+id/action_how_many"
                android:icon="@drawable/ic_help_black"
                android:title="@string/how_many" />
        </menu>
    </item>

</menu>